# iris

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  data.ipynb  visualize.ipynb
iris/: __init__.py  data.py
src/: data.rs  lib.rs  main.rs  model.rs  process.rs  train.rs
tests/: __init__.py  data.rs  model.rs  process.rs  processing.rs  train.rs  utils.rs
