[package]
name = "iris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
polars = { version = "0.26.1", features = ["lazy"] }
reqwest = { version = "0.11.13", features = ["blocking"] }
