[package]
name = "iris"
version = "0.1.0"
description = "Iris dataset pre-processing in Rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
linfa = "0.6.1"
linfa-trees = "0.6.1"
ndarray = "0.15.6"
polars = { version = "0.26.1", features = ["lazy", "dtype-full", "ndarray"] }
rand = "0.8.5"
reqwest = { version = "0.11.13", features = ["blocking"] }
